--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
     "bcryptjs": "3.0.2",
     "clsx": "2.1.1",
     "kysely": "^0.27.5",
-    "next": "15.2.0",
-    "next-auth": "5.0.0-beta.25",
-    "postcss": "8.5.3",
+    "next": "^15.5.6",
+    "next-auth": "^5.0.0-beta.30",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "tailwindcss": "^4.0.9",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4"
   },
@@ -28,6 +26,9 @@
     "@types/node": "22.13.8",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
     "typescript": "5.8.2"
   },
   "overrides": {
